--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -7,7 +7,7 @@
   &-header {
     position: fixed;
     height: 60px;
-    background-color: rgba(0, 0, 0, 0.85);
+    // background-color: rgba(0, 0, 0, 0.85);
     z-index: 1;
     width: 100%;
 
@@ -20,6 +20,13 @@
       justify-content: space-between;
 
       &-logo {
+        cursor: pointer;
+        line-height: 60px;
+        color: #fff;
+
+        &-title {
+          margin-left: 8px;
+        }
       }
 
       &-search {
