--- a/src/layouts/common.less
+++ b/src/layouts/common.less
@@ -1,3 +1,16 @@
 #root {
   height: 100vh;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+a,
+a:focus,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
+  outline: none 0;
+}
