fix: 修改用户列表发送消息后最后一条消息更新

--- a/src/components/VideoCard/index.less
+++ b/src/components/VideoCard/index.less
@@ -1,6 +1,6 @@
 .qvbilam-video-video-card {
-  width: 240px;
-  height: 208px;
+  // width: 240px;
+  // height: 208px;
 
   position: relative;
   --title-font-size: 15px;
